Product cards are took from API. Added color filtration.

--- a/catalog.html
+++ b/catalog.html
@@ -66,15 +66,7 @@
                     <section id="color" class="sidebar__section">
                         <div class="sidebar__toggle"></div>
                         <h3 class="sidebar__title subtitle">color</h3>
-                        <ul class="sidebar__grid">
-                            <li class="color-black"></li>
-                            <li class="color-brown"></li>
-                            <li class="color-blue"></li>
-                            <li class="color-green"></li>
-                            <li class="color-gray"></li>
-                            <li class="color-orange"></li>
-                            <li class="color-white"></li>
-                        </ul>
+                        <ul id="color-grid" class="sidebar__grid"></ul>
                     </section>
                     <section class="sidebar__section">
                         <div class="sidebar__toggle"></div>
@@ -105,255 +97,7 @@
                         </ul>
                     </section>
                 </aside>
-                <section class="catalog__products">
-                    <div class="catalog__product product-card">
-                        <img src="./img/products/image1.png" alt="shorts" class="product-card__img">
-                        <div class="product-card__title-place">
-                            <h5 class="product-card__title subtitle">
-                                Marchal's Original Cargo Short
-                            </h5>
-                        </div> 
-                        <ul class="product-card__rating">
-                            <li class="product-card__star"></li>
-                            <li class="product-card__star"></li>
-                            <li class="product-card__star"></li>
-                            <li class="product-card__star"></li>
-                            <li class="product-card__star"></li>
-                        </ul>
-                        <p class="product-card__text">As low as <span class="product-card__price">$40.99</span></p>
-                        <div class="product-card__color-wrapper">
-                                <ul class="product-card__color-list">
-                                <li class="product-card__color color-black"></li>
-                                <li class="product-card__color color-gray"></li>
-                                <li class="product-card__color color-beige"></li>
-                                <li class="product-card__color color-blue"></li>
-                                <li class="product-card__color color-brown"></li>
-                                <li class="product-card__color color-green"></li>
-                            </ul>
-                        </div>
-                        <div class="product-card__btn">ADD TO CART</div>
-                    </div>
-                    <div class="catalog__product product-card">
-                        <img src="./img/products/image2.png" alt="shorts" class="product-card__img">
-                        <div class="product-card__title-place">
-                            <h5 class="product-card__title subtitle">Inlet Original Short</h5>
-                        </div>
-                        <ul class="product-card__rating">
-                            <li class="product-card__star"></li>
-                            <li class="product-card__star"></li>
-                            <li class="product-card__star"></li>
-                            <li class="product-card__star"></li>
-                            <li class="product-card__star"></li>
-                        </ul>
-                        <p class="product-card__text">As low as <span class="product-card__price">$38.99</span></p>
-                        <div class="product-card__color-wrapper">
-                            <ul class="product-card__color-list">
-                                <li class="product-card__color color-black"></li>
-                                <li class="product-card__color color-brown"></li>
-                                <li class="product-card__color color-green"></li>
-                            </ul>
-                        </div>
-                        <div class="product-card__btn">ADD TO CART</div>
-                    </div>
-                    <div class="catalog__product product-card">
-                        <img src="./img/products/image3.png" alt="shorts" class="product-card__img">
-                        <div class="product-card__title-place">
-                            <h5 class="product-card__title subtitle">TGIF Pant</h5>
-                        </div>
-                        <ul class="product-card__rating">
-                            <li class="product-card__star"></li>
-                            <li class="product-card__star"></li>
-                            <li class="product-card__star"></li>
-                            <li class="product-card__star"></li>
-                            <li class="product-card__star product-card__star-void"></li>
-                        </ul>
-                        <p class="product-card__text">As low as <span class="product-card__price">$40.99</span></p>
-                        <div class="product-card__color-wrapper">
-                            <ul class="product-card__color-list">
-                                <li class="product-card__color color-black"></li>
-                                <li class="product-card__color color-gray"></li>
-                                <li class="product-card__color color-beige"></li>
-                                <li class="product-card__color color-brown"></li>
-                                <li class="product-card__color color-gray"></li>
-                                <li class="product-card__color color-beige"></li>
-                                <li class="product-card__color color-brown"></li>
-                            </ul>
-                        </div>
-                        <div class="product-card__btn">ADD TO CART</div>
-                    </div>
-                    <div class="catalog__product product-card">
-                        <img src="./img/products/image4.png" alt="shorts" class="product-card__img">
-                        <div class="product-card__title-place">
-                            <h5 class="product-card__title subtitle">Inlet Original Pant</h5>
-                        </div>
-                        <ul class="product-card__rating">
-                            <li class="product-card__star"></li>
-                            <li class="product-card__star"></li>
-                            <li class="product-card__star"></li>
-                            <li class="product-card__star product-card__star-void"></li>
-                            <li class="product-card__star product-card__star-void"></li>
-                        </ul>
-                        <p class="product-card__text">As low as <span class="product-card__price">$52.99</span></p>
-                        <div class="product-card__color-wrapper">
-                            <ul class="product-card__color-list">
-                                <li class="product-card__color color-black"></li>
-                                <li class="product-card__color color-gray"></li>
-                                <li class="product-card__color color-beige"></li>
-                                <li class="product-card__color color-brown"></li>
-                                <li class="product-card__color color-green"></li>
-                            </ul>
-                        </div>
-                        <div class="product-card__btn">ADD TO CART</div>
-                    </div>
-
-                    <div class="catalog__product product-card">
-                        <img src="./img/products/image1.png" alt="shorts" class="product-card__img">
-                        <div class="product-card__title-place">
-                            <h5 class="product-card__title subtitle">
-                                Marchal's Original Cargo Short
-                            </h5>
-                        </div> 
-                        <ul class="product-card__rating">
-                            <li class="product-card__star"></li>
-                            <li class="product-card__star"></li>
-                            <li class="product-card__star"></li>
-                            <li class="product-card__star"></li>
-                            <li class="product-card__star"></li>
-                        </ul>
-                        <p class="product-card__text">As low as <span class="product-card__price">$40.99</span></p>
-                        <div class="product-card__color-wrapper">
-                                <ul class="product-card__color-list">
-                                <li class="product-card__color color-black"></li>
-                                <li class="product-card__color color-gray"></li>
-                                <li class="product-card__color color-beige"></li>
-                                <li class="product-card__color color-blue"></li>
-                                <li class="product-card__color color-brown"></li>
-                            </ul>
-                        </div>
-                        <div class="product-card__btn">ADD TO CART</div>
-                    </div>
-                    <div class="catalog__product product-card">
-                        <img src="./img/products/image2.png" alt="shorts" class="product-card__img">
-                        <div class="product-card__title-place">
-                            <h5 class="product-card__title subtitle">Inlet Original Short</h5>
-                        </div>
-                        <ul class="product-card__rating">
-                            <li class="product-card__star"></li>
-                            <li class="product-card__star"></li>
-                            <li class="product-card__star"></li>
-                            <li class="product-card__star"></li>
-                            <li class="product-card__star"></li>
-                        </ul>
-                        <p class="product-card__text">As low as <span class="product-card__price">$38.99</span></p>
-                        <div class="product-card__color-wrapper">
-                            <ul class="product-card__color-list">
-                                <li class="product-card__color color-black"></li>
-                                <li class="product-card__color color-brown"></li>
-                                <li class="product-card__color color-green"></li>
-                            </ul>
-                        </div>
-                        <div class="product-card__btn">ADD TO CART</div>
-                    </div>
-                    <div class="catalog__product product-card">
-                        <img src="./img/products/image3.png" alt="shorts" class="product-card__img">
-                        <div class="product-card__title-place">
-                            <h5 class="product-card__title subtitle">TGIF Pant</h5>
-                        </div>
-                        <ul class="product-card__rating">
-                            <li class="product-card__star"></li>
-                            <li class="product-card__star"></li>
-                            <li class="product-card__star"></li>
-                            <li class="product-card__star"></li>
-                            <li class="product-card__star product-card__star-void"></li>
-                        </ul>
-                        <p class="product-card__text">As low as <span class="product-card__price">$40.99</span></p>
-                        <div class="product-card__color-wrapper">
-                            <ul class="product-card__color-list">
-                                <li class="product-card__color color-black"></li>
-                                <li class="product-card__color color-gray"></li>
-                                <li class="product-card__color color-beige"></li>
-                                <li class="product-card__color color-brown"></li>
-                                <li class="product-card__color color-gray"></li>
-                                <li class="product-card__color color-beige"></li>
-                                <li class="product-card__color color-brown"></li>
-                            </ul>
-                        </div>
-                        <div class="product-card__btn">ADD TO CART</div>
-                    </div>
-                    <div class="catalog__product product-card">
-                        <img src="./img/products/image4.png" alt="shorts" class="product-card__img">
-                        <div class="product-card__title-place">
-                            <h5 class="product-card__title subtitle">Inlet Original Pant</h5>
-                        </div>
-                        <ul class="product-card__rating">
-                            <li class="product-card__star"></li>
-                            <li class="product-card__star"></li>
-                            <li class="product-card__star"></li>
-                            <li class="product-card__star product-card__star-void"></li>
-                            <li class="product-card__star product-card__star-void"></li>
-                        </ul>
-                        <p class="product-card__text">As low as <span class="product-card__price">$52.99</span></p>
-                        <div class="product-card__color-wrapper">
-                            <ul class="product-card__color-list">
-                                <li class="product-card__color color-black"></li>
-                                <li class="product-card__color color-gray"></li>
-                                <li class="product-card__color color-beige"></li>
-                                <li class="product-card__color color-brown"></li>
-                                <li class="product-card__color color-green"></li>
-                            </ul>
-                        </div>
-                        <div class="product-card__btn">ADD TO CART</div>
-                    </div>
-
-                    <div class="catalog__product product-card">
-                        <img src="./img/products/image1.png" alt="shorts" class="product-card__img">
-                        <div class="product-card__title-place">
-                            <h5 class="product-card__title subtitle">
-                                Marchal's Original Cargo Short
-                            </h5>
-                        </div> 
-                        <ul class="product-card__rating">
-                            <li class="product-card__star"></li>
-                            <li class="product-card__star"></li>
-                            <li class="product-card__star"></li>
-                            <li class="product-card__star"></li>
-                            <li class="product-card__star"></li>
-                        </ul>
-                        <p class="product-card__text">As low as <span class="product-card__price">$40.99</span></p>
-                        <div class="product-card__color-wrapper">
-                                <ul class="product-card__color-list">
-                                <li class="product-card__color color-black"></li>
-                                <li class="product-card__color color-gray"></li>
-                                <li class="product-card__color color-beige"></li>
-                                <li class="product-card__color color-blue"></li>
-                                <li class="product-card__color color-brown"></li>
-                            </ul>
-                        </div>
-                        <div class="product-card__btn">ADD TO CART</div>
-                    </div>
-                    <div class="catalog__product product-card">
-                        <img src="./img/products/image2.png" alt="shorts" class="product-card__img">
-                        <div class="product-card__title-place">
-                            <h5 class="product-card__title subtitle">Inlet Original Short</h5>
-                        </div>
-                        <ul class="product-card__rating">
-                            <li class="product-card__star"></li>
-                            <li class="product-card__star"></li>
-                            <li class="product-card__star"></li>
-                            <li class="product-card__star"></li>
-                            <li class="product-card__star"></li>
-                        </ul>
-                        <p class="product-card__text">As low as <span class="product-card__price">$38.99</span></p>
-                        <div class="product-card__color-wrapper">
-                            <ul class="product-card__color-list">
-                                <li class="product-card__color color-black"></li>
-                                <li class="product-card__color color-brown"></li>
-                                <li class="product-card__color color-green"></li>
-                            </ul>
-                        </div>
-                        <div class="product-card__btn">ADD TO CART</div>
-                    </div>
-                </section>
+                <section class="catalog__products"></section>
                 <ul class="paggination">
                     <li class="paggination__prev hide"></li>
                     <li class="paggination__current">1</li>
